[package]
name = "fltk-calendar"
version = "0.2.0"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2018"
description = "A calendar dialog for fltk-rs"
repository = "https://github.com/MoAlyousef/fltk-rs-calendar"
documentation = "https://docs.rs/fltk-calendar"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fltk_calendar"
path = "src/lib.rs"

[dependencies]
fltk = "0.16"
chrono = "0.4"