[package]
name = "fltk-calendar"
version = "0.4.2"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2021"
description = "A calendar dialog for fltk-rs"
repository = "https://github.com/fltk-rs/fltk-calendar"
documentation = "https://docs.rs/fltk-calendar"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[lib]
name = "fltk_calendar"
path = "src/lib.rs"

[dependencies]
fltk = "1.4.0"
chrono = "0.4"